// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rum client dashboard queries fetches client metrics 1`] = `
Object {
  "apm": Object {
    "events": Array [
      "transaction",
    ],
  },
  "body": Object {
    "aggs": Object {
      "hasFetchStartField": Object {
        "aggs": Object {
          "backEnd": Object {
            "percentiles": Object {
              "field": "transaction.marks.agent.timeToFirstByte",
              "hdr": Object {
                "number_of_significant_value_digits": 3,
              },
              "percents": Array [
                50,
              ],
            },
          },
          "totalPageLoadDuration": Object {
            "percentiles": Object {
              "field": "transaction.duration.us",
              "hdr": Object {
                "number_of_significant_value_digits": 3,
              },
              "percents": Array [
                50,
              ],
            },
          },
        },
        "filter": Object {
          "exists": Object {
            "field": "transaction.marks.navigationTiming.fetchStart",
          },
        },
      },
    },
    "query": Object {
      "bool": Object {
        "filter": Array [
          Object {
            "range": Object {
              "@timestamp": Object {
                "format": "epoch_millis",
                "gte": 0,
                "lte": 50000,
              },
            },
          },
          Object {
            "term": Object {
              "transaction.type": "page-load",
            },
          },
          Object {
            "term": Object {
              "service.environment": "staging",
            },
          },
        ],
        "must_not": Array [],
      },
    },
    "size": 0,
    "track_total_hits": true,
  },
}
`;

exports[`rum client dashboard queries fetches long task metrics 1`] = `
Object {
  "apm": Object {
    "events": Array [
      "transaction",
    ],
  },
  "body": Object {
    "aggs": Object {
      "longTaskCount": Object {
        "percentiles": Object {
          "field": "transaction.experience.longtask.count",
          "hdr": Object {
            "number_of_significant_value_digits": 3,
          },
          "percents": Array [
            50,
          ],
        },
      },
      "longTaskMax": Object {
        "percentiles": Object {
          "field": "transaction.experience.longtask.max",
          "hdr": Object {
            "number_of_significant_value_digits": 3,
          },
          "percents": Array [
            50,
          ],
        },
      },
      "longTaskSum": Object {
        "percentiles": Object {
          "field": "transaction.experience.longtask.sum",
          "hdr": Object {
            "number_of_significant_value_digits": 3,
          },
          "percents": Array [
            50,
          ],
        },
      },
    },
    "query": Object {
      "bool": Object {
        "filter": Array [
          Object {
            "range": Object {
              "@timestamp": Object {
                "format": "epoch_millis",
                "gte": 0,
                "lte": 50000,
              },
            },
          },
          Object {
            "term": Object {
              "transaction.type": "page-load",
            },
          },
          Object {
            "exists": Object {
              "field": "transaction.marks.navigationTiming.fetchStart",
            },
          },
        ],
        "must_not": Array [],
      },
    },
    "size": 0,
  },
}
`;

exports[`rum client dashboard queries fetches page view trends 1`] = `
Object {
  "apm": Object {
    "events": Array [
      "transaction",
    ],
  },
  "body": Object {
    "aggs": Object {
      "pageViews": Object {
        "aggs": undefined,
        "auto_date_histogram": Object {
          "buckets": 50,
          "field": "@timestamp",
        },
      },
    },
    "query": Object {
      "bool": Object {
        "filter": Array [
          Object {
            "range": Object {
              "@timestamp": Object {
                "format": "epoch_millis",
                "gte": 0,
                "lte": 50000,
              },
            },
          },
          Object {
            "term": Object {
              "transaction.type": "page-load",
            },
          },
          Object {
            "term": Object {
              "service.environment": "staging",
            },
          },
        ],
        "must_not": Array [],
      },
    },
    "size": 0,
  },
}
`;
